implicit Intent And WebView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,7 @@
         android:theme="@style/Theme.DemoApp"
         tools:targetApi="31">
         <activity
-            android:name=".TextAndScrollView"
+            android:name=".WebViewActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +23,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RelativeLayout"
+            android:name=".ImplicitIntentActivity"
             android:exported="true"/>
 
+        <activity
+            android:name=".TextAndScrollView"
+            android:exported="true" />
+        <activity
+            android:name=".RelativeLayout"
+            android:exported="true" />
         <activity
             android:name=".LinearLayout"
             android:exported="true" />
