--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +15,10 @@
         android:theme="@style/Theme.DemoApp"
         tools:targetApi="31">
         <activity
-            android:name=".WebViewActivity"
+            android:name="Project.WebActivity"
+            android:exported="false" />
+        <activity
+            android:name="Project.IntroActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +27,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ImplicitIntentActivity"
+            android:name="Project.AndroidActivity"
+            android:exported="true" />
+        <activity
+            android:name="Project.SelectionActivity"
+            android:exported="true" />
+        <activity
+            android:name=".WebViewActivity"
             android:exported="true"/>
 
+        <activity
+            android:name=".ImplicitIntentActivity"
+            android:exported="true" />
         <activity
             android:name=".TextAndScrollView"
             android:exported="true" />
